# game-of-life

./: .gitignore  CMakeLists.txt  Makefile  README.md  ansi.c  ansi.h  board.c  board.h  main.c
.github/workflows/: ci.yaml
board/: board.c  board.h
console/: CMakeLists.txt  ansi.c  ansi.h
gui/: CMakeLists.txt  gui.c
